--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyMeWCMRFohjaxr19lSCajhA",
+      "authorship_tag": "ABX9TyPm8v0cOyabD3vKdwtgeFmL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "!pip install plotly-express --quiet\n",
         "!pip install vincenty --quiet"
       ],
-      "execution_count": null,
+      "execution_count": 210,
       "outputs": []
     },
     {
@@ -49,7 +49,7 @@
       "source": [
         "!pip freeze > requirements.txt"
       ],
-      "execution_count": 209,
+      "execution_count": 211,
       "outputs": []
     },
     {
@@ -73,6 +73,8 @@
         "import seaborn as sns\n",
         "from sklearn.neighbors import NearestNeighbors\n",
         "from sklearn.cluster import DBSCAN\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import GridSearchCV\n",
         "from tensorflow.keras.utils import to_categorical\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Embedding, RepeatVector, LSTM, Dense\n",
@@ -83,7 +85,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "import plotly_express as px"
       ],
-      "execution_count": null,
+      "execution_count": 237,
       "outputs": []
     },
     {
@@ -95,7 +97,7 @@
         "port_file = '/content/drive/MyDrive/Ports/ports.csv'\n",
         "tracking_file = '/content/drive/MyDrive/Ports/tracking.csv'"
       ],
-      "execution_count": null,
+      "execution_count": 213,
       "outputs": []
     },
     {
@@ -139,7 +141,7 @@
         "\n",
         "  return df1, df2"
       ],
-      "execution_count": null,
+      "execution_count": 214,
       "outputs": []
     },
     {
@@ -150,7 +152,7 @@
       "source": [
         "df1, df2 = wrangle()"
       ],
-      "execution_count": null,
+      "execution_count": 215,
       "outputs": []
     },
     {
@@ -177,7 +179,7 @@
         "  except:\n",
         "    return -99"
       ],
-      "execution_count": null,
+      "execution_count": 216,
       "outputs": []
     },
     {
@@ -194,7 +196,7 @@
         "# a dictionary to retrieve the port id from the index\n",
         "idx_ports = {idx:port for idx, port in zip(df1.index, df1.port)}"
       ],
-      "execution_count": null,
+      "execution_count": 217,
       "outputs": []
     },
     {
@@ -204,7 +206,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8Rg5F1xcTElh",
-        "outputId": "127ad33c-9633-4f21-ec2e-49d0310c8787"
+        "outputId": "93be4971-bf2e-475b-cd64-36319570c101"
       },
       "source": [
         "# training a nearest neighbor model to  find the closest port when the \n",
@@ -222,7 +224,7 @@
         "print(dist[0] * 6370)\n",
         "print([idx_ports[n] for n in n[0]])"
       ],
-      "execution_count": null,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +257,7 @@
         "  else:\n",
         "    return idx_ports[pred[0][0]]"
       ],
-      "execution_count": null,
+      "execution_count": 219,
       "outputs": []
     },
     {
@@ -278,7 +280,7 @@
         "  else:\n",
         "    return dist[0][0]"
       ],
-      "execution_count": null,
+      "execution_count": 220,
       "outputs": []
     },
     {
@@ -296,7 +298,7 @@
         "  loc = row['lat_long']\n",
         "  return vincenty(port, loc)"
       ],
-      "execution_count": null,
+      "execution_count": 221,
       "outputs": []
     },
     {
@@ -327,7 +329,7 @@
         "\n",
         "  return db.labels_"
       ],
-      "execution_count": null,
+      "execution_count": 222,
       "outputs": []
     },
     {
@@ -340,7 +342,7 @@
         "df1['labels'] = train_dbscan()\n",
         "db_labels = {port:cluster for port, cluster in zip(df1['port'], df1['labels'])}"
       ],
-      "execution_count": null,
+      "execution_count": 223,
       "outputs": []
     },
     {
@@ -408,7 +410,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": null,
+      "execution_count": 224,
       "outputs": []
     },
     {
@@ -452,7 +454,7 @@
         "  \n",
         "  return df"
       ],
-      "execution_count": null,
+      "execution_count": 225,
       "outputs": []
     },
     {
@@ -495,7 +497,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": null,
+      "execution_count": 226,
       "outputs": []
     },
     {
@@ -513,7 +515,7 @@
         "df2['vin_per_hour'] = df2['vin_diff'] / df2['hour_delta']\n",
         "df2 = df2.query('vin_per_hour <= 50')"
       ],
-      "execution_count": null,
+      "execution_count": 227,
       "outputs": []
     },
     {
@@ -533,7 +535,7 @@
         "# assigning ports to each dataframe\n",
         "processed_dfs = {key:assign_ports(vessel_dfs[key]) for key in vessel_dfs.keys()}"
       ],
-      "execution_count": null,
+      "execution_count": 228,
       "outputs": []
     },
     {
@@ -544,7 +546,7 @@
       "source": [
         "alldf = pd.concat(processed_dfs[key] for key in processed_dfs.keys())"
       ],
-      "execution_count": null,
+      "execution_count": 229,
       "outputs": []
     },
     {
@@ -570,7 +572,7 @@
         "  draft_max = ports_dfs[df].query('sum_draft >=1').port_dist.max()\n",
         "  min_max[df] = [ports_dfs[df]['port_dist'].max(), ports_dfs[df]['port_dist'].min(), draft_max]"
       ],
-      "execution_count": null,
+      "execution_count": 230,
       "outputs": []
     },
     {
@@ -587,7 +589,7 @@
         "# voyages_df['end_coords'] = [ports[key] for key in voyages_df['end_port_id']]\n",
         "# voyages_df['voyage_dist'] = [vincenty(x, y) for x, y in zip(voyages_df['begin_coords'], voyages_df['end_coords'])]"
       ],
-      "execution_count": null,
+      "execution_count": 231,
       "outputs": []
     },
     {
@@ -598,12 +600,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 142
         },
-        "outputId": "ec408ad0-42ca-4b06-fdd6-61af9e9f6431"
+        "outputId": "beb68817-f74d-4adc-b19c-4b79c5896522"
       },
       "source": [
         "voyages_df.head(3)"
       ],
-      "execution_count": null,
+      "execution_count": 232,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +675,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 232
         }
       ]
     },
@@ -728,7 +730,7 @@
         "  \n",
         "  return df.astype(int)"
       ],
-      "execution_count": null,
+      "execution_count": 233,
       "outputs": []
     },
     {
@@ -739,7 +741,7 @@
       "source": [
         "model_df = pd.concat([prepare_data(processed_dfs[key], 6) for key in processed_dfs.keys()])"
       ],
-      "execution_count": null,
+      "execution_count": 234,
       "outputs": []
     },
     {
@@ -781,13 +783,17 @@
         "  \n",
         "  return grid_result"
       ],
-      "execution_count": null,
+      "execution_count": 235,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jtEHbOIdTCDW"
+        "id": "jtEHbOIdTCDW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09244e77-e7d1-4bc1-f877-41ab59f641c1"
       },
       "source": [
         "model_1ahead = build_model(target='port_1ahead', min_samples=5, n_back=3)\n",
@@ -795,7 +801,18 @@
         "model_3ahead = build_model(target='port_3ahead', min_samples=5, n_back=3)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/model_selection/_split.py:667: UserWarning:\n",
+            "\n",
+            "The least populated class in y has only 1 members, which is less than n_splits=3.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1040,89 +1057,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 142
-        },
-        "id": "zPZZ6EX_ANdP",
-        "outputId": "7edd056c-5cb8-4400-f94e-b30fdedaf9cd"
+        "id": "zPZZ6EX_ANdP"
       },
       "source": [
         "lstm_pred.head(3)                             # what's with the 91s?"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>vessel</th>\n",
-              "      <th>last_port</th>\n",
-              "      <th>pred1</th>\n",
-              "      <th>pred2</th>\n",
-              "      <th>pred3</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>1</td>\n",
-              "      <td>92</td>\n",
-              "      <td>91</td>\n",
-              "      <td>138</td>\n",
-              "      <td>91</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2</td>\n",
-              "      <td>36</td>\n",
-              "      <td>91</td>\n",
-              "      <td>57</td>\n",
-              "      <td>138</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>3</td>\n",
-              "      <td>13</td>\n",
-              "      <td>57</td>\n",
-              "      <td>149</td>\n",
-              "      <td>75</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   vessel  last_port  pred1  pred2  pred3\n",
-              "0       1         92     91    138     91\n",
-              "1       2         36     91     57    138\n",
-              "2       3         13     57    149     75"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 207
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
