--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyPm8v0cOyabD3vKdwtgeFmL",
+      "authorship_tag": "ABX9TyMmD0Ngkn1LXJL8m2OT5yb3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,9 @@
         "id": "xrMMphhGyTIp"
       },
       "source": [
-        "I'll clean up this repo and provide visualizations. I also want to figure out how to get an LSTM model working with multiple embeddings. Trying things out as I learn.\n"
+        "I'll clean up this repo and provide visualizations. I also want to figure out how to get an LSTM model working with multiple embeddings. Trying things out as I learn.\n",
+        "\n",
+        "I also figured that since re-entries were permitted, I'd submit an entry now to get feedback. "
       ]
     },
     {
@@ -800,7 +802,7 @@
         "model_2ahead = build_model(target='port_2ahead', min_samples=5, n_back=3)\n",
         "model_3ahead = build_model(target='port_3ahead', min_samples=5, n_back=3)"
       ],
-      "execution_count": null,
+      "execution_count": 238,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,6 +813,53 @@
             "\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "The training excluded vessels: {64, 160, 165, 168, 43, 107, 51, 85, 22}\n",
+            "The best model params were: {'learning_rate': 0.03}\n",
+            "The best accuracy achieved was: 0.3395638629283489\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/model_selection/_split.py:667: UserWarning:\n",
+            "\n",
+            "The least populated class in y has only 1 members, which is less than n_splits=3.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "The training excluded vessels: {64, 160, 165, 168, 43, 107, 51, 85, 22}\n",
+            "The best model params were: {'learning_rate': 0.02}\n",
+            "The best accuracy achieved was: 0.3139494634821738\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/model_selection/_split.py:667: UserWarning:\n",
+            "\n",
+            "The least populated class in y has only 1 members, which is less than n_splits=3.\n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "The training excluded vessels: {64, 160, 165, 168, 43, 107, 51, 85, 22}\n",
+            "The best model params were: {'learning_rate': 0.02}\n",
+            "The best accuracy achieved was: 0.2654897888542748\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -831,7 +880,7 @@
         "\n",
         "  return ports_[-n_input:]"
       ],
-      "execution_count": null,
+      "execution_count": 239,
       "outputs": []
     },
     {
@@ -842,9 +891,9 @@
       "source": [
         "# creating a dictionary with the most recent ports visited for each vessel\n",
         "\n",
-        "window_data = {key:get_pred_data(processed_dfs[key], n_input=6) for key in processed_dfs.keys()}"
+        "window_data = {key:get_pred_data(processed_dfs[key], n_input=3) for key in processed_dfs.keys()}"
       ],
-      "execution_count": null,
+      "execution_count": 243,
       "outputs": []
     },
     {
@@ -861,7 +910,7 @@
         "sub['cluster_2back'] = [db_labels[n] for n in sub[1]]\n",
         "sub['cluster_3back'] = [db_labels[n] for n in sub[2]]"
       ],
-      "execution_count": null,
+      "execution_count": 244,
       "outputs": []
     },
     {
@@ -884,7 +933,7 @@
         "sub['port_3ahead'] = port_3\n",
         "sub['port_3ahead_2nd'] = port_3_alt"
       ],
-      "execution_count": null,
+      "execution_count": 245,
       "outputs": []
     },
     {
@@ -899,7 +948,7 @@
         "sub.loc[sub['port_1ahead'] == sub['port_2ahead'], 'port_2ahead'] = sub['port_2ahead_2nd']\n",
         "sub.loc[sub['port_2ahead'] == sub['port_3ahead'], 'port_3ahead'] = sub['port_3ahead_2nd']"
       ],
-      "execution_count": null,
+      "execution_count": 246,
       "outputs": []
     },
     {
@@ -930,7 +979,7 @@
         "sub['end_port_id'] = sub['end_port_id'].astype(int)\n",
         "sub = sub.reset_index(drop=True)"
       ],
-      "execution_count": null,
+      "execution_count": 247,
       "outputs": []
     },
     {
@@ -950,7 +999,7 @@
       "source": [
         "encoder = {key:value for key, value in zip(df1['port'], df1.index)}"
       ],
-      "execution_count": null,
+      "execution_count": 248,
       "outputs": []
     },
     {
@@ -1013,11 +1062,11 @@
         "id": "PBLlbXF6lqyi"
       },
       "source": [
-        "seq_for_pred = (np.array([encoder[j] for j in n]) for k, n in window_data.values()])\n",
+        "seq_for_pred = np.array([[encoder[j] for j in n] for n in window_data.values()])\n",
         "seq_for_pred = pad_sequences(seq_for_pred, maxlen=6, value=0)\n",
         "preds = model.predict(seq_for_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 255,
       "outputs": []
     },
     {
@@ -1032,7 +1081,7 @@
         "third_port = pd.Series([np.argmax(n[2]) for n in preds])\n",
         "alt_third = pd.Series([np.argsort(n[2])[-2] for n in preds])"
       ],
-      "execution_count": null,
+      "execution_count": 256,
       "outputs": []
     },
     {
@@ -1051,19 +1100,95 @@
         "lstm_pred['pred3'] = np.where(lstm_pred['pred2'] == lstm_pred['pred3'], lstm_pred['alt3'], lstm_pred['pred3'])\n",
         "lstm_pred.drop(columns=['alt2', 'alt3'], inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 257,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zPZZ6EX_ANdP"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "id": "zPZZ6EX_ANdP",
+        "outputId": "9469a89d-8bb3-4599-93ee-a176fb7b0681"
       },
       "source": [
         "lstm_pred.head(3)                             # what's with the 91s?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 258,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>vessel</th>\n",
+              "      <th>last_port</th>\n",
+              "      <th>pred1</th>\n",
+              "      <th>pred2</th>\n",
+              "      <th>pred3</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>92</td>\n",
+              "      <td>83</td>\n",
+              "      <td>138</td>\n",
+              "      <td>88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>36</td>\n",
+              "      <td>115</td>\n",
+              "      <td>57</td>\n",
+              "      <td>88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>13</td>\n",
+              "      <td>156</td>\n",
+              "      <td>149</td>\n",
+              "      <td>76</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   vessel  last_port  pred1  pred2  pred3\n",
+              "0       1         92     83    138     88\n",
+              "1       2         36    115     57     88\n",
+              "2       3         13    156    149     76"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 258
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1074,7 +1199,7 @@
         "sub.to_csv('predict.csv', index=False)\n",
         "voyages_df.to_csv('voyages.csv', index=False)"
       ],
-      "execution_count": null,
+      "execution_count": 259,
       "outputs": []
     },
     {
@@ -1087,20 +1212,6 @@
         "                     hover_name='pred_port')\n",
         "\n",
         "fig.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MnaJpiELRKK4"
-      },
-      "source": [
-        "# submissions\n",
-        "\n",
-        "voyages = pd.DataFrame(columns= ['vessel', 'begin_date', 'end_date', 'begin_port_id', 'end_port_id'])\n",
-        "predict = pd.DataFrame(columns= ['vessel', 'begin_port_id', 'end_port_id', 'voyage'])"
       ],
       "execution_count": null,
       "outputs": []
