--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyNuGwhZOpo1nhREjhvjKSh5",
+      "authorship_tag": "ABX9TyP9XwZiqCmNbkP9ey1LxIBu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -876,6 +876,9 @@
         "id": "T1wikN3M42_m"
       },
       "source": [
+        "# creating a dataset to train the LSTM model. i had to do a bit of troubleshooting,\n",
+        "# hence the try/except\n",
+        "\n",
         "lstm_data = []\n",
         "\n",
         "for i in processed_dfs.keys():\n",
@@ -894,6 +897,8 @@
         "id": "Yj9dvByke8iK"
       },
       "source": [
+        "# a dictionary to encode the ports for the model\n",
+        "\n",
         "encoder = {key:value for key, value in zip(df1['port'], df1.index)}"
       ],
       "execution_count": 472,
@@ -905,30 +910,47 @@
         "id": "zWPWg-FVSLyH"
       },
       "source": [
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from keras.models import Sequential\n",
-        "from keras.layers import Embedding, RepeatVector, LSTM, Dense, TimeDistributed\n",
-        "\n",
+        "# concatenating the LSTM data\n",
         "lstm_df = pd.concat(lstm_data)\n",
-        "total_ports = 122\n",
         "\n",
+        "# defining the number of ports\n",
+        "total_ports = len(encoder.keys())\n",
+        "\n",
+        "# slicing off the feature array\n",
         "X = lstm_df[[0, 1, 2, 3, 4, 5]]\n",
         "\n",
+        "# encoding each port to create a \"vocabulary\" of ports starting at index 0\n",
         "for col in X.columns:\n",
         "  X.loc[:,col] = X[col].map(encoder)\n",
         "\n",
+        "# creating the target array with shape (samples, 3, 1) and converting to category\n",
         "y = lstm_df[['port_1ahead', 'port_2ahead', 'port_3ahead']]\n",
         "y = to_categorical(y)\n",
         "\n",
+        "# train and test split to validate model during training - could use 'validation_split' in .fit()\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1944)\n",
         "\n",
+        "# initializing the Sequential class\n",
         "model = Sequential()\n",
         "\n",
+        "# adding an embedding layer to embed each port in a 3 dimensional space\n",
         "model.add(Embedding(total_ports, 3, input_length=6))\n",
+        "\n",
+        "# adding an LSTM layer to process the embedded vector sequences\n",
         "model.add(LSTM(100, activation='relu', return_sequences=False))\n",
+        "\n",
+        "# adding a crucial layer to allows the output sequence to be of a diff length\n",
         "model.add(RepeatVector(3))\n",
+        "\n",
+        "# another LSTM layer, this one repeating the sequence\n",
         "model.add(LSTM(50, activation='relu', return_sequences=True))\n",
-        "# model.add(Dense(50, activation='relu'))\n",
+        "\n",
+        "# model.add(Dense(50, activation='relu'))                                  <-------- layer i added/subtracted\n",
+        "\n",
+        "# adding a TimeDistributed Dense layer to output predictions. note the # of \n",
+        "# categories is not 'efficient' but it does make decoding the prediction take one\n",
+        "# fewer step\n",
+        "\n",
         "model.add(TimeDistributed(Dense(179, activation='softmax')))\n",
         "\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
@@ -942,6 +964,8 @@
         "id": "WoIgnQNPV0V4"
       },
       "source": [
+        "# fitting the model with early stopping\n",
+        "\n",
         "history = model.fit(X_train,y_train,\n",
         "                    validation_data=(X_test, y_test),\n",
         "                    batch_size=32,\n",
@@ -959,8 +983,13 @@
         "id": "PBLlbXF6lqyi"
       },
       "source": [
+        "# getting the sequences and encoding them so the model can use them as inputs\n",
         "seq_for_pred = np.array([[encoder[j] for j in n] for n in window_data.values()])\n",
+        "\n",
+        "# padding the sequences with fewer than 6 \n",
         "seq_for_pred = pad_sequences(seq_for_pred, maxlen=6, value=0)\n",
+        "\n",
+        "# predicting the next 3 ports visited\n",
         "preds = model.predict(seq_for_pred)"
       ],
       "execution_count": 563,
@@ -972,6 +1001,8 @@
         "id": "fBQApzdGwu1q"
       },
       "source": [
+        "# assigning the predictions and back-up predictions to variables. if a port\n",
+        "# repeats, i replace it with the second most likely\n",
         "first_port = pd.Series([np.argmax(n[0]) for n in preds])\n",
         "second_port = pd.Series([np.argmax(n[1]) for n in preds])\n",
         "alt_second = pd.Series([np.argsort(n[1])[-2] for n in preds])\n",
@@ -987,7 +1018,7 @@
         "id": "kOqRO78LoVr6"
       },
       "source": [
-        "\n",
+        "# creating a dataframe of the above\n",
         "last_port = pd.Series(seq_for_pred[:,-1])\n",
         "lstm_pred = pd.concat([last_port, first_port, second_port, alt_second, third_port, alt_third], axis=1)\n",
         "lstm_pred.index = window_data.keys()\n",
