--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyP9XwZiqCmNbkP9ey1LxIBu",
+      "authorship_tag": "ABX9TyMaRLoIH/kV91MXxzwqTa3V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "source": [
         "I'll clean up this repo and provide visualizations. \n",
         "\n",
-        "I used many quick plots to figure out heuristics to exclude ships travelling near ports with no intention of docking, but I excluded them from his notebook because it was messy. I'll clean up a few and put them in. \n"
+        "I used many quick plots to figure out heuristics to exclude ships travelling near ports with no intention of docking, but I excluded them from his notebook because it was messy. I'll clean up a few and put them in."
       ]
     },
     {
@@ -723,29 +723,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JOHuijIk9lde"
-      },
-      "source": [
-        "get_differences = {}\n",
-        "\n",
-        "for port in alldf.pred_port.unique():\n",
-        "  df_ = alldf[alldf['pred_port'] == port].copy()\n",
-        "  nunique_above25 = df_[df_['port_dist'] >=20]['vessel'].nunique()\n",
-        "  nunique_below12 = df_[df_['port_dist'] <=12]['vessel'].nunique()\n",
-        "  get_differences[port] = [nunique_above25, nunique_below12]"
-      ],
-      "execution_count": 596,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "J5ERpuNpF_WT"
       },
       "source": [
         "def get_pred_data(df, n_input = 3):\n",
         "  \"\"\"\n",
-        "  preparing the sequences for predictions\n",
+        "  preparing the sequences for predictions with the XGBClassifier model\n",
         "  \"\"\"\n",
         "\n",
         "  df = get_voyages(df)\n",
