--- a/sym_cargo.ipynb
+++ b/sym_cargo.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1bTzsC2_o8Jg772hCJWDRqrHnkqeQuRQx",
-      "authorship_tag": "ABX9TyP9VqT7Hi/oqsjBBjRGwHnl",
+      "authorship_tag": "ABX9TyMhzJRCnLp+LCTi2AKUES0V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,6 +451,7 @@
         "  df['min_speed_for_seq'] = df.groupby('seq_port')['vin_speed'].transform(lambda x: x.min())\n",
         "  df['nearest_port_dist'] = [[(v)[1] for v in close_ones[n].items()][0] if n in close_ones else 0 for n in df['pred_port']]\n",
         "  df['nearest_port_min'] = (df['port_dist'] > (df['nearest_port_dist']/2)).astype(int)\n",
+        "  df['backup_pred'] = df['pred_port']\n",
         "  # df['max_draft_change'] = [min_max[n][2] if n in min_max else 0 for n in df['pred_port']]\n",
         "  # df['dist_above_max'] = (df['port_dist'] > df['max_draft_change']).astype(int)\n",
         "  # df['pred_port'] = np.where(df['dist_above_max'] == 1, 0, df['pred_port'])\n",
@@ -483,8 +484,14 @@
         "  condition6 = ((df['pred_port'] == 99) & (df['port_dist'] >10))\n",
         "  df.loc[condition6, 'pred_port'] = 0\n",
         "\n",
-        "  condition7 = (df['min_dist_for_seq'] > 40)\n",
+        "  condition7 = ((df['min_dist_for_seq'] > 40) & (df['sum_draft_change'] <1))\n",
         "  df.loc[condition7, 'pred_port'] = 0\n",
+        "\n",
+        "  condition8 = ((df['pred_port'] == 34) & (df['port_dist'] > 24))\n",
+        "  df.loc[condition8, 'pred_port'] = 0\n",
+        "\n",
+        "  specific155 = ~((df['sum_draft_change'] >0) | (df['seq_count'] >5))\n",
+        "  df['pred_port'] = np.where(specific155, 0, df['pred_port'])\n",
         "\n",
         "  df['pred_port'] = np.where(df['dist_diff'] >= 15, 0, df['pred_port']) \n",
         "\n",
@@ -494,7 +501,7 @@
         "\n",
         "  return df"
       ],
-      "execution_count": 39,
+      "execution_count": 560,
       "outputs": []
     },
     {
@@ -538,7 +545,7 @@
         "  \n",
         "  return df"
       ],
-      "execution_count": 30,
+      "execution_count": 386,
       "outputs": []
     },
     {
@@ -572,7 +579,7 @@
         "  \n",
         "  return prior_ports "
       ],
-      "execution_count": 31,
+      "execution_count": 387,
       "outputs": []
     },
     {
@@ -608,7 +615,7 @@
         "\n",
         "  return brng"
       ],
-      "execution_count": 32,
+      "execution_count": 388,
       "outputs": []
     },
     {
@@ -646,7 +653,7 @@
         "# assigning ports to each dataframe\n",
         "processed_dfs = {key:assign_ports(vessel_dfs[key]) for key in vessel_dfs.keys()}"
       ],
-      "execution_count": 40,
+      "execution_count": 561,
       "outputs": []
     },
     {
@@ -658,7 +665,7 @@
         "alldf = pd.concat(processed_dfs)\n",
         "alldf = alldf.droplevel(0)"
       ],
-      "execution_count": 42,
+      "execution_count": 562,
       "outputs": []
     },
     {
@@ -684,7 +691,7 @@
         "  draft_max = ports_dfs[df].query('draft_change >=1').port_dist.max()\n",
         "  min_max[df] = [ports_dfs[df]['port_dist'].max(), ports_dfs[df]['port_dist'].min(), draft_max]"
       ],
-      "execution_count": 43,
+      "execution_count": 563,
       "outputs": []
     },
     {
@@ -702,12 +709,14 @@
         "  df_['dist_above_min'] = df_['min_dist_for_seq'] - df_['min_dist']\n",
         "  df_['dist_above_max'] = (df_['port_dist'] > df_['max_draft_change']).astype(int)\n",
         "  df_['pred_port'] = np.where(df_['dist_above_max'] == 1, 0, df_['pred_port'])\n",
-        "  test = ((df_['sum_draft_change'] <1) & (df_['dist_above_min'] > 20))\n",
-        "  df_['pred_port'] = np.where(test, 0, df_['pred_port'])\n",
+        "  \n",
+        "  reverse = ((df_['isnan'] == 1) & (df_['sum_draft_change'] >0))\n",
+        "  df_['pred_port'] = np.where(reverse, df_['backup_pred'], df_['pred_port'])\n",
+        "  \n",
         "  processed_dfs[df] = df_\n",
         "  "
       ],
-      "execution_count": 44,
+      "execution_count": 564,
       "outputs": []
     },
     {
@@ -719,7 +728,7 @@
         "alldf = pd.concat(processed_dfs)\n",
         "alldf = alldf.droplevel(0)"
       ],
-      "execution_count": 45,
+      "execution_count": 565,
       "outputs": []
     },
     {
@@ -731,21 +740,21 @@
         "voyages_df = pd.concat([get_voyages(processed_dfs[key]) for key in processed_dfs.keys()])\n",
         "voyages_df['begin_date'] = voyages_df['begin_date'].dt.date\n",
         "voyages_df['end_date'] = voyages_df['end_date'].dt.date\n",
-        "voyages_df['len_voyage'] = voyages_df['end_date'] - voyages_df['begin_date']\n",
-        "voyages_df['begin_coords'] = [ports[key] for key in voyages_df['begin_port_id']]\n",
-        "voyages_df['end_coords'] = [ports[key] for key in voyages_df['end_port_id']]\n",
-        "voyages_df['voyage_dist'] = [vincenty(x, y) for x, y in zip(voyages_df['begin_coords'], voyages_df['end_coords'])]"
+        "# voyages_df['len_voyage'] = voyages_df['end_date'] - voyages_df['begin_date']\n",
+        "# voyages_df['begin_coords'] = [ports[key] for key in voyages_df['begin_port_id']]\n",
+        "# voyages_df['end_coords'] = [ports[key] for key in voyages_df['end_port_id']]\n",
+        "# voyages_df['voyage_dist'] = [vincenty(x, y) for x, y in zip(voyages_df['begin_coords'], voyages_df['end_coords'])]"
       ],
-      "execution_count": 46,
+      "execution_count": 624,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wd0hoOmBHd7c"
+        "id": "Qk0K7tLLw9_5"
       },
       "source": [
-        "voyages_df.sort_values(by='len_voyage', ascending=True).head(30)"
+        "voyages_df.sort_values(by='voyage_dist').head(30)"
       ],
       "execution_count": null,
       "outputs": []
@@ -756,25 +765,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Zt1cbFxNr9sG",
-        "outputId": "9b033a67-d980-4375-d6d3-0abfa4e2fac1"
+        "id": "NKuh8UYTR8jy",
+        "outputId": "a96607ad-9ff1-4cc5-e0a7-16a6d2b5da3c"
       },
       "source": [
         "voyages_df.shape"
       ],
-      "execution_count": 47,
+      "execution_count": 623,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(2947, 9)"
+              "(3274, 9)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 623
         }
       ]
     },
@@ -829,7 +838,7 @@
         "  \n",
         "  return df.astype(int)"
       ],
-      "execution_count": 48,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -871,83 +880,21 @@
         "  \n",
         "  return grid_result"
       ],
-      "execution_count": 49,
+      "execution_count": 85,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jtEHbOIdTCDW",
-        "outputId": "97793b37-6d33-4345-8a95-27bc49dff73f"
+        "id": "jtEHbOIdTCDW"
       },
       "source": [
         "model_1ahead = build_model(target='port_1ahead', min_samples=2, n_back=3)\n",
         "model_2ahead = build_model(target='port_2ahead', min_samples=2, n_back=3)\n",
         "model_3ahead = build_model(target='port_3ahead', min_samples=2, n_back=3)"
       ],
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/model_selection/_split.py:667: UserWarning:\n",
-            "\n",
-            "The least populated class in y has only 1 members, which is less than n_splits=3.\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "The training excluded vessels: {64, 66, 133, 107, 59}\n",
-            "The best model params were: {'learning_rate': 0.1}\n",
-            "The best accuracy achieved was: 0.40524544846618255\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/model_selection/_split.py:667: UserWarning:\n",
-            "\n",
-            "The least populated class in y has only 1 members, which is less than n_splits=3.\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "The training excluded vessels: {64, 66, 133, 107, 59}\n",
-            "The best model params were: {'learning_rate': 0.1}\n",
-            "The best accuracy achieved was: 0.3786732502613659\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/model_selection/_split.py:667: UserWarning:\n",
-            "\n",
-            "The least populated class in y has only 1 members, which is less than n_splits=3.\n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "The training excluded vessels: {64, 66, 133, 107, 59}\n",
-            "The best model params were: {'learning_rate': 0.1}\n",
-            "The best accuracy achieved was: 0.34147923671743285\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -984,7 +931,7 @@
         "\n",
         "window_data = {key:get_pred_data(processed_dfs[key], n_input=3) for key in processed_dfs.keys()}"
       ],
-      "execution_count": 52,
+      "execution_count": 629,
       "outputs": []
     },
     {
@@ -1001,7 +948,7 @@
         "sub['cluster_2back'] = [db_labels[n] for n in sub[1]]\n",
         "sub['cluster_3back'] = [db_labels[n] for n in sub[2]]"
       ],
-      "execution_count": 53,
+      "execution_count": 630,
       "outputs": []
     },
     {
@@ -1024,7 +971,7 @@
         "sub['port_3ahead'] = port_3\n",
         "sub['port_3ahead_2nd'] = port_3_alt"
       ],
-      "execution_count": 54,
+      "execution_count": 631,
       "outputs": []
     },
     {
@@ -1039,7 +986,7 @@
         "sub.loc[sub['port_1ahead'] == sub['port_2ahead'], 'port_2ahead'] = sub['port_2ahead_2nd']\n",
         "sub.loc[sub['port_2ahead'] == sub['port_3ahead'], 'port_3ahead'] = sub['port_3ahead_2nd']"
       ],
-      "execution_count": 55,
+      "execution_count": 632,
       "outputs": []
     },
     {
@@ -1070,7 +1017,7 @@
         "sub['end_port_id'] = sub['end_port_id'].astype(int)\n",
         "sub = sub.reset_index(drop=True)"
       ],
-      "execution_count": 56,
+      "execution_count": 633,
       "outputs": []
     },
     {
@@ -1100,7 +1047,7 @@
         "  except:\n",
         "    print(i)"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -1113,7 +1060,7 @@
         "\n",
         "encoder = {key:value for key, value in zip(df1['port'], df1.index)}"
       ],
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -1204,7 +1151,7 @@
         "# predicting the next 3 ports visited\n",
         "preds = model.predict(seq_for_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1221,7 +1168,7 @@
         "third_port = pd.Series([np.argmax(n[2]) for n in preds])\n",
         "alt_third = pd.Series([np.argsort(n[2])[-2] for n in preds])"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -1240,7 +1187,7 @@
         "lstm_pred['pred3'] = np.where(lstm_pred['pred2'] == lstm_pred['pred3'], lstm_pred['alt3'], lstm_pred['pred3'])\n",
         "lstm_pred.drop(columns=['alt2', 'alt3'], inplace=True)"
       ],
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -1252,7 +1199,7 @@
         "reverse_encoder = {v:k for k, v in encoder.items()}\n",
         "lstm_pred['last_port'] = lstm_pred['last_port'].map(reverse_encoder)"
       ],
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -1270,7 +1217,7 @@
         "lstm_pred['voyage'] = lstm_pred.groupby('vessel').cumcount()+1\n",
         "lstm_pred = lstm_pred.astype(int).reset_index(drop=True)"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -1279,6 +1226,7 @@
         "id": "ksfEgenhtQJs"
       },
       "source": [
+        "# i think i'm messing up, but the XGB model is fine - review this\n",
         "lstm_pred.head(3)"
       ],
       "execution_count": null,
@@ -1294,7 +1242,7 @@
         "lstm_pred.to_csv('lstm_predict.csv', index=False)\n",
         "voyages_df.to_csv('voyages.csv', index=False)"
       ],
-      "execution_count": null,
+      "execution_count": 634,
       "outputs": []
     },
     {
@@ -1341,60 +1289,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h6ko7YflUl8Y"
-      },
-      "source": [
-        "draft_and_voyages(vessel=162)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "i-KDUEhEJzCF"
       },
       "source": [
-        "imp_cols = ['vessel', 'lat_long', 'draft', 'vin_diff', 'vin_speed', 'isnan', 'pred_port', 'draft_change', 'sum_draft_change', 'port_dist', 'sum_draft_change']"
+        "imp_cols = ['vessel', 'lat_long', 'draft', 'vin_diff', 'vin_speed', 'isnan', 'pred_port', 'backup_pred', 'draft_change', 'sum_draft_change', 'port_dist', 'sum_draft_change']"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HDVWJpvbbyhD"
-      },
-      "source": [
-        "voyages_df[voyages_df['len_voyage'] < '3 days']['vessel'].value_counts().sort_values()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MFvc84oLq_js"
-      },
-      "source": [
-        "alldf.groupby(['vessel', 'seq_kneigh']).agg({'draft': ['first', 'last'],\n",
-        "                                             'pred_port' : 'median',\n",
-        "                                             'heading' : ['first', 'last'],\n",
-        "                                             'port_dist' : 'min',\n",
-        "                                             'vin_speed' : 'min'}).head(30)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CR9jeiN7nVf6"
-      },
-      "source": [
-        "print(alldf.query('pred_port == 115')[imp_cols].to_string())"
-      ],
-      "execution_count": null,
+      "execution_count": 418,
       "outputs": []
     }
   ]
